
2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c [!COB_ALLOW_UNALIGNED]: fixed unused variable warning
	* parser.y (evaluate_body): don't call cb_emit_evaluate if contained
	  statements are skipped (not active USE FOR DEBUGGING), fixing bug #693
	* parser.y: dropped "main_statement" and deactivated unnecessary calls to
	  begin_implicit_statement

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): prevent bad integer promotion in
	  libcob (typeck within va_arg) by forcing the unsigned long type for
	  the varargs argument
	* typeck.c (cb_build_generic_register): favor memcpy over strncpy

2020-12-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (cobc_LDADD): fixed ordering, in-tree libraries
	  must be specified first

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): codegen to output INDEXED BY variables

2020-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (remove_trailing_slash) [_MSC_VER]: new function added to resolve
	  MSVC's issues with trailing slashes

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppcopy_try_open): removed preprocessor check/define S_ISREG as
	  done in libcob/common.h
	* codegen.c (output_display_fields): changed NULL-checked fields to
	  generate calls to (cob_dump_field) to keep formatting and control there
	  instead of preformatting with use of message-related (cob_dump_output);
	  fixed output for based-check'd OCCURS 01 and comment-only output

2020-12-01  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): emit code to check if BASED/LINKAGE fields
	  have a not NULL base address before dumping them; handle depending_on

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_dump_code): moved out of (output_internal_function)
	* codegen.c (output_dump_code): generate "end of dump" message
	* codegen.c (output_display_fields): always output group OCCURS items,